Added the controllers and routers

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^5.0.0",
     "@types/mongoose": "^5.11.96",
     "@types/nodemon": "^1.19.6",
+    "axios": "^1.7.9",
     "D": "^1.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
