--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.7.9",
     "D": "^1.0.0",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "mongoose": "^8.9.2",
     "node": "^23.5.0",
